--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,39 @@
 
-.header {
-    padding: 10px;
+body  {
+    font-family: ;
+    font-size: 2rem;
+    margin: 0.67em ;
+    padding: 5rem;
     text-align: center;
-    background: #FA6E61;
+}
+header {
+    border: #333;
+    display: flex;
+    background-color: #333;
     color: white;
-    font-family: "WindSong", cursive;
-    font-weight: 400;
-    font-style: normal;
+    text-align: center;
+    padding: 1em;
+    margin-bottom: 10em;
 }
 
+#contact {
+    li {
+        display: inline;
+      }
+      li a:hover {
+        background-color: #ff7e93;
+      }
+      li a {
+        display: block;
+        color: rgb(0, 0, 0);
+        padding: 14px 16px;
+        text-decoration: none;
+      }
+    background-color: #f4f4f4;
+    padding: 0;
+    margin: 0;
+    border: 3px solid #e49494;
+    list-style-type: none;
+    text-align: center;
+
+}
