--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,13 @@
 
 body  {
-    font-family: Arial, sans-serif;
+    font-family:Tahoma, sans-serif;
     font-size: 2rem;
     margin: 0.67em ;
     padding: 5rem;
     text-align: center;
+    border-style: solid;
+    border-color: #e199f7;
+    border-width: 3rem;
 }
 header {
     border: #333;
@@ -17,6 +20,7 @@ header {
 }
 
 #contact {
+    flex-wrap: wrap;
     li {
         display: inline;
       }
@@ -30,14 +34,16 @@ header {
         text-decoration: none;
       }
       .active {
-        background-color: #ff7e93;
+        background-color: #631FE6
       }
-    background-color: #FA6E61;
+    background-color: #e199f7;
     padding: 0rem;
     margin: 2rem;
-    border: 3px solid #e49494;
+    border: 5px solid #631FE6;
     list-style-type: none;
     text-align: center;
+    font-style: italic;
+
 
 }
 
@@ -51,10 +57,11 @@ header {
     font-size: large;
 }
 #reviewstitle {
-    text-align: center;
+    text-align: left;
     margin: 1;
     padding: 1em;
     list-style-type: none;
+    
 }
 
 
@@ -64,12 +71,41 @@ header {
     padding: 1em;
     list-style-type: none;
     font-size: 1.5rem;
+    
+}
+h2 {
+    text-align: right;
+    margin: 1;
+    padding: 1em;
+    list-style-type: none;
+    font-size: 2rem;
+    
+}
+
+#tips {
+    text-align: left;
+    margin: 1;
+    padding: 1em;
+    list-style-type: none;
+    font-size: 1.5rem;
+    border-style: solid;
+    
+}
+#aboutme {
+    text-align: right;
+    margin: 1;
+    padding: 5em;
+    list-style-type: none;
+    justify-content: left;
+    font-size:20px;
+    
 }
 
 #footer {
     background-color: #EFB11D;
     color: #000000;
-    text-align: center;
+    text-align: right;
     padding: 1em;
     margin-top: 10em;
+    border: 3px solid #631FE6;
 }
