--- a/css/style.css
+++ b/css/style.css
@@ -50,11 +50,12 @@ header {
 #gallery {
     display: flex;
     flex-wrap: wrap;
-    justify-content: left;
+    justify-content: center;
+    text-align: center;
     margin: 0;
     padding: 2em;
-    list-style-type: none;
-    font-size: large;
+    list-style-type: flex;
+    font-size: 10px;
 }
 #reviewstitle {
     text-align: left;
@@ -82,23 +83,18 @@ h2 {
     
 }
 
-#tips {
-    text-align: left;
-    margin: 1;
-    padding: 1em;
-    list-style-type: none;
-    font-size: 1.5rem;
-    border-style: solid;
-    
-}
+
+
 #aboutme {
     text-align: right;
+    font-family:'Courier New', Courier, monospace;
     margin: 1;
     padding: 5em;
     list-style-type: none;
     justify-content: left;
     font-size:20px;
-    
+    border: 10px solid #FA6E61;
+    background-color: #FA6E61;
 }
 
 #footer {
@@ -107,5 +103,6 @@ h2 {
     text-align: right;
     padding: 1em;
     margin-top: 10em;
-    border: 3px solid #631FE6;
+    border: 3px solid #000000;
+
 }
